--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,27 @@ header{
 /* bottone */
 .bottone{
     border-radius: 15px;
-    padding: 6px;
-    background-color: white;
+    padding: 10px;
     border: 0px;
 }
 
+.sfondo-bianco{
+    background-color: white;
+}
+
+.grassetto{
+    font-size: x-large;
+}
+
+.sfondo-nero{
+    background-color: black;
+    color: white;
+}
+
+.contenitore-bottoni{
+    margin: 20px;
+    text-align: center;
+}
 /* lista ul */
 ul {
     list-style-type: none;
@@ -78,14 +94,19 @@ a{
 /* main */
 
 /* contenitore blu con dentro un contenitore rosa  */
-
+.contenitore-foto{
+    height: 700px;
+    max-width: 100%;
+    
+}
 .contenitore {
     height: 300px;
     width: 100%;
     margin: 0 auto;
 }
-.blu-main{
-    background-color: blue;
+.sfondo-alto{
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
 }
 
 .riga{
@@ -96,16 +117,33 @@ a{
 }
 
 .colonna{
-    
     height: 250px;
     margin: auto;
-
 }
 
+.titolo-main{
+    font-size: 50px;
+    text-align: center;
+    color: white;
+}
+
+.p-main{
+    margin-top: 30px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
 .rosa-main{
     width: 80%;
     margin: auto;
-    background-color: palevioletred;
+    
+}
+
+.bottone-grande{
+    border-radius: 30px;
+    padding: 15px;
+    border: 0px;
+    margin: 10px 15px;
 }
 
 
