--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,14 @@ header{
 }
 
 
-.border{
-    border: 1px dotted black;
-}
+
 .riga-header{
     max-width: 1200px;
     margin: auto;
-    height: 35px;
     display: flex;
-    
-    
 }
 
 .colonne-header{
-    height: 100%;
     display: flex;
     align-items: center;
     padding: 8px;
@@ -79,7 +73,8 @@ header{
 ul {
     list-style-type: none;
 }
-li{
+
+.li-header{
     display: inline-block;
     margin:10px;
 }
@@ -100,7 +95,7 @@ a{
     
 }
 .contenitore {
-    height: 300px;
+
     width: 100%;
     margin: 0 auto;
 }
@@ -111,15 +106,12 @@ a{
 
 .riga{
     max-width: 1200px;
-    height: 100%;
     display: flex;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .colonna{
-    height: 250px;
-    margin: auto;
-    
+margin: auto;    
 }
 
 .titolo-main{
@@ -160,14 +152,12 @@ a{
 
 .riga-larghezza-minore{
     width: 60%;
-    height: 100%;
     display: flex;
     margin: 0 auto;
 
 }
 
 .celeste{  
-    background-color: rgb(5, 107, 224);
     width: 70%;
 }
 
@@ -176,7 +166,6 @@ a{
 }
 
 .rosa{
-    background-color: rgba(255, 213, 242, 0.863);
     width: 30%;
 }
 
@@ -201,16 +190,13 @@ a{
 }
 
 .contenitore-grande{
-    height: 600px;
     margin: 0 auto;
 
 }
 
 .colonna-grande{
-    height: 500px;
     width: 60%;
     margin: auto;
-    background-color: green;
 }
 
 .bg-viola{
@@ -238,17 +224,13 @@ a{
 
 .colonna-grande-footer{
     width: calc(100% / 4);
-    background-color: red;
 }
 
 .colonna-footer{
     width: calc(75% / 4);
-    background-color: rgb(7, 226, 226);
 }
 
-.border-bianco{
-    border: 1px dotted white;
-}
+
 
 #margin-bottom-grigio{
     border-bottom: solid 3px grey;
@@ -264,12 +246,6 @@ a{
     padding-bottom: 40px;
     padding-top: 15px;
 }
-
-.sfondo-colore-acqua{
-    background-color: aquamarine;
-    
-}
-
 .sfondo-rosa{
     background-color: rgba(255, 213, 242, 0.863);
     padding: 3px;
